[update] dark mode button ui fixes

--- a/demos/photographer/photographer.css
+++ b/demos/photographer/photographer.css
@@ -292,7 +292,7 @@ body.dark,
 
 .dark-mode {
 	position: fixed;
-	top: 0;
+	top: 20px;
 	right: 65px;
 	text-align: center;
 	margin: 0 auto;
